--- a/style.css
+++ b/style.css
@@ -29,6 +29,17 @@ color: wheat;
 }  */
 
 
+body {
+  
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.dark-mode {
+  background-color: rgb(50, 42, 42);
+  color: white;
+}
 
   
 .jumbotron{
@@ -38,7 +49,7 @@ color: wheat;
   background-image: url(./newsizeclimber\ \(4\).jpg);
   background-size: 100%;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: left;
   min-height: 680px;
   animation: zoom ease 3s;
   animation-fill-mode: forwards;
@@ -82,3 +93,10 @@ opacity: 0;
 }
 
 } 
+pre {
+  padding-top: 2rem;
+}
+/* $light: #dddddd;
+$dark: #000;
+
+@import "bootstrap"; */
